posiGen_FullsendBox/src/objects/Dropbox_Files_in_Box__c.object
<CustomObject>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Path__c</fullName>
        <label>Directory Path</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>done</label>
        <type>Checkbox</type>
    </fields>
    <label>Dropbox Files in Box</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Files in Box</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>